@@ -1,7 +1,7 @@
 Package: rcicr
 Type: Package
 Title: Reverse correlation image classification toolbox
-Version: 0.2.3
+Version: 0.2.4
 Date: 2014-07-26
 URL: http://ron.dotsch.org/rcicr
 Author: Ron Dotsch <rdotsch@gmail.com>
